# rokey_A-2_frontend

./: GIT_COLLABORATION_GUIDE.md  README.md
backend/: firebase URL.txt  index.html  read_from_firebase.py  robot_backend.py  user_interface.html  write_to_firebase.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cobot1/lib/cobot1/: dough_grip_test  force_test  main = cobot1.main:maindougn_to_plate  mini_jog  move_basic  move_periodic  plate_setting_test  press_test  spatula_test  surveon
install/cobot1/share/cobot1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
script/: robot_gui.py
src/cobot1/: package.xml  setup.py
src/cobot1/cobot1/: dough_grip_test.py  dough_to_plate.py  main.py  plate_setting_test.py  press_test.py  spatula_test.py
src/cobot1/cobot1/lecture/: force_test.py  mini_jog.py  move_basic.py  move_periodic.py  surveon.py
src/cobot1/cobot1/requirement/: backend_create.md  main_file_create.md  plate_setting_requirement.md  press_requirement.md
src/doosan-robot2/.devcontainer/: Dockerfile  devcontainer.json
src/doosan-robot2/.github/workflows/: docker-image.yml
src/doosan-robot2/dsr_bringup2/dsr_bringup2/: gazebo_connection.py  run_emulator.py  utils.py
src/doosan-robot2/dsr_bringup2/launch/: dsr_bringup2_gazebo.launch.py  dsr_bringup2_moveit.launch.py  dsr_bringup2_mujoco.launch.py  dsr_bringup2_rviz.launch.py  dsr_bringup2_spawn_on_gazebo.launch.py
src/doosan-robot2/dsr_common2/: CMakeLists.txt
src/doosan-robot2/dsr_common2/imp/: DRFC.py  DSR_ROBOT2.py
src/doosan-robot2/dsr_common2/include/: DRFC.h  DRFL.h  DRFLEx.h  DRFS.h  dsr_robot.h
src/doosan-robot2/dsr_controller2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_controller2/config/: dsr_controller2.yaml
src/doosan-robot2/dsr_controller2/src/: dsr_controller2.cpp
src/doosan-robot2/dsr_description2/ros2_control/: a0509.gz_ros2_control.xacro  a0509.mj_ros2_control.xacro  a0509.ros2_control.xacro  a0912.gz_ros2_control.xacro  a0912.mj_ros2_control.xacro  a0912.ros2_control.xacro  e0509.gz_ros2_control.xacro  e0509.mj_ros2_control.xacro  e0509.ros2_control.xacro  h2017.gz_ros2_control.xacro  h2017.mj_ros2_control.xacro  h2017.ros2_control.xacro  h2515.gz_ros2_control.xacro  h2515.mj_ros2_control.xacro  h2515.ros2_control.xacro  m0609.gz_ros2_control.xacro  m0609.mj_ros2_control.xacro  m0609.ros2_control.xacro  m0617.gz_ros2_control.xacro  m0617.mj_ros2_control.xacro  m0617.ros2_control.xacro  m1013.gz_ros2_control.xacro  m1013.mj_ros2_control.xacro  m1013.ros2_control.xacro  m1509.gz_ros2_control.xacro  m1509.mj_ros2_control.xacro  m1509.ros2_control.xacro  p3020.gz_ros2_control.xacro  p3020.ros2_control.xacro
src/doosan-robot2/dsr_description2/urdf/: a0509.blue.urdf  a0509.white.urdf  a0912.blue.urdf  a0912.white.urdf  h2017.blue.urdf  h2515.blue.urdf  h2515.white.urdf  m0609.blue.urdf  m0609.white.urdf  m0617.blue.urdf  m0617.white.urdf  m1013.blue.urdf  m1013.white.urdf  m1509.blue.urdf  m1509.white.urdf  p3020.blue.urdf  p3020.white.urdf
src/doosan-robot2/dsr_description2/xacro/: a0509.urdf.xacro  a0912.urdf.xacro  e0509.urdf.xacro  h2017.urdf.xacro  h2515.urdf.xacro  m0609.urdf.xacro  m0617.urdf.xacro  m1013.urdf.xacro  m1509.urdf.xacro  macro.a0509.blue.xacro  macro.a0509.white.xacro  macro.a0912.blue.xacro  macro.a0912.white.xacro  macro.h2017.blue.xacro  macro.h2017.white.xacro  macro.h2515.blue.xacro  macro.h2515.white.xacro  macro.m0609.blue.xacro  macro.m0609.white.xacro  macro.m0617.blue.xacro  macro.m0617.white.xacro  macro.m1013.blue.xacro  macro.m1013.white.xacro  macro.m1509.blue.xacro  macro.m1509.white.xacro  macro.p3020.blue.xacro  macro.p3020.white.xacro  p3020.urdf.xacro
src/doosan-robot2/dsr_example2/dsr_example/: package.xml  setup.py
src/doosan-robot2/dsr_example2/dsr_example/dsr_example/simple/: test.py  test2.py  test_action_jog_h2r.py  test_action_movej_h2r.py  test_action_movel_h2r.py
src/doosan-robot2/dsr_example2/dsr_realtime_control/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_hardware2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_hardware2/src/: dsr_hw_interface2.cpp
src/doosan-robot2/dsr_moveit2/dsr_moveit_config_a0509/: .setup_assistant
src/doosan-robot2/dsr_moveit2/dsr_moveit_config_a0912/: .setup_assistant
src/doosan-robot2/dsr_msgs2/: CMakeLists.txt  package.xml
src/dsr_rokey2/dsr_rokey2/: mini_jog.py
(+64 files in other folders)
