<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_example</name>
  <version>0.0.0</version>
  <description>This package is example code for Doosan Robot ROS2 packages.</description>

  <maintainer email="minsoo.song@doosan.com">minsoo.song</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>dsr_common2</depend>
  
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
